# AI-tsumutsumu-Beta

./: .gitignore  Procfile  channel.py  discordbot.py  history.py  judging_puns.py  message.py  pyproject.toml  readme.md  requirements.txt
cogs/: sample_cog.py
prompts/: tsumugi_normal.txt  tsumugi_reply.txt
