[tool.poetry]
name = "ai-tsumutsumu-beta"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.0"
discord = "^2.2.2"
python-dotenv = "^1.0.0"
tiktoken = "^0.4.0"
mecab-python3 = "^1.0.6"
ipadic = "^1.0.0"
unidic-lite = "^1.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
